force-app/main/default/objects/FacturaDeProveedor__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>Creada</fullName>
                <default>true</default>
                <label>Creada</label>
            </value>
            <value>
                <fullName>Contabilizada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>