force-app/main/default/objects/FacturaDeProveedor__c/fields/FacturaCreadaEnQbo__c.field-meta.xml
<CustomField>
    <fullName>FacturaCreadaEnQbo__c</fullName>
    <formula>NOT ( ISBLANK ( IdQbo__c ) )</formula>
    <label>Factura creada en QBO</label>
    <type>Checkbox</type>
</CustomField>