force-app/main/default/objects/FacturaDeProveedor__c/fields/FechaPagada__c.field-meta.xml
<CustomField>
    <fullName>FechaPagada__c</fullName>
    <label>Fecha pagada</label>
    <type>Date</type>
</CustomField>