force-app/main/default/objects/FacturaDeProveedor__c/fields/FechaRecibida__c.field-meta.xml
<CustomField>
    <fullName>FechaRecibida__c</fullName>
    <label>Fecha recibida</label>
    <type>Date</type>
</CustomField>