force-app/main/default/objects/FacturaDeProveedor__c/fields/FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaVencimiento__c</fullName>
    <label>Fecha vencimiento</label>
    <type>Date</type>
</CustomField>