force-app/main/default/objects/FacturaDeProveedor__c/fields/FechaVencimientoActualizada__c.field-meta.xml
<CustomField>
    <fullName>FechaVencimientoActualizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fecha vencimiento actualizada</label>
    <type>Checkbox</type>
</CustomField>