force-app/main/default/objects/FacturaDeProveedor__c/fields/IdQboJournalEntry__c.field-meta.xml
<CustomField>
    <fullName>IdQboJournalEntry__c</fullName>
    <externalId>true</externalId>
    <label>Id QBO Journal Entry</label>
    <length>12</length>
    <type>Text</type>
</CustomField>