force-app/main/default/objects/FacturaDeProveedor__c/fields/JournalEntryCreadoEnQbo__c.field-meta.xml
<CustomField>
    <fullName>JournalEntryCreadoEnQbo__c</fullName>
    <formula>NOT ( ISBLANK ( IdQboJournalEntry__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Entry creado en QBO</label>
    <type>Checkbox</type>
</CustomField>