force-app/main/default/objects/FacturaDeProveedor__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Facturas de Proveedor</relationshipLabel>
    <relationshipName>FacturasDeProveedor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>