force-app/main/default/objects/FacturaDeProveedor__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas de Proveedor</relationshipLabel>
    <relationshipName>FacturasDeProveedor</relationshipName>
    <type>Lookup</type>
</CustomField>