force-app/main/default/objects/FacturaDeProveedor__c/fields/QB_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QB_SyncToken__c</fullName>
    <label>QB SyncToken</label>
    <length>3</length>
    <type>Text</type>
</CustomField>