force-app/main/default/objects/FacturaDeProveedor__c/fields/QboJournalEntryDescription__c.field-meta.xml
<CustomField>
    <fullName>QboJournalEntryDescription__c</fullName>
    <formula>&quot;Inv# &quot; &amp; Name &amp; &quot; [&quot; &amp; Pedido__r.Name &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QBO Journal Entry Description</label>
    <type>Text</type>
</CustomField>