force-app/main/default/objects/FacturaDeProveedor__c/fields/QboJournalEntryNo__c.field-meta.xml
<CustomField>
    <fullName>QboJournalEntryNo__c</fullName>
    <formula>&quot;Inv#&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QBO Journal Entry No</label>
    <type>Text</type>
</CustomField>