force-app/main/default/objects/FacturaDeProveedor__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposito</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>